<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/suPrimary"
    tools:context="bskerritt.student.ncirl.ie.saddleup.MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_above="@+id/button2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="29dp"
        android:text="@string/lessonButton"
        android:textColor="@color/suPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_above="@+id/imageView6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:text="@string/ridersButton"
        android:textColor="@color/suPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="38dp"
        android:text="@string/activityButton"
        android:textColor="@color/suPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        app:srcCompat="@drawable/sulogoland"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        app:srcCompat="@drawable/hat"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/activity"
        tools:ignore="ContentDescription"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/imageView7"
        android:layout_alignEnd="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/time"
        tools:ignore="ContentDescription"
        android:layout_alignBottom="@+id/button"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

</RelativeLayout>
